syntax = "proto3";

package payment.v1alpha1;
option go_package = "github.com/cuemby/ccp-payment-service/payment/v1alpha1";


import "payment/v1alpha1/payment.proto";
//import "payment.proto";

service PaymentAPIService{
    rpc CreateSuscription(CreateSuscriptionRequest) returns (CreateSuscriptionResponse) {}; 
    rpc CreateCard(CreateCardRequest) returns (CreateCardResponse) {}; 
    rpc UpdateSuscription(UpdateSuscriptionRequest) returns (UpdateSuscriptionResponse) {}; 
    rpc CancelSuscription(CancelSuscriptionRequest) returns (CancelSuscriptionResponse) {}; 
    rpc GetOrganizationPayment(GetOrganizationPaymentRequest) returns (GetOrganizationPaymentResponse) {}; 
    rpc GetSuscription(GetSuscriptionRequest) returns (GetSuscriptionResponse) {}; 
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {}
    rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse) {}
    rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {};
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse) {};
    rpc GetBilingMonth(GetBilingMonthRequest) returns (GetBilingMonthResponse) {};
    rpc GetPayments(GetPaymentsRequest) returns (GetPaymentsResponse) {};
    rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {};
    rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {};
    rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse) {};
    rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse) {};
    rpc ListPayment(ListPaymentRequest) returns (ListPaymentResponse) {}; 
    rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {}; 
    rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}; 
    rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse) {}; 
    rpc InvoiceFilter(InvoiceFilterRequest) returns (InvoiceFilterResponse) {};
}

message InvoiceFilterRequest {
        string year = 1;
        string month = 2;
        payment.v1alpha1.CustomerList customer_list = 3;
        uint32  organization_id = 4;       
    }
    
message InvoiceFilterResponse {
    payment.v1alpha1.CustomerList customer_list = 1;
    payment.v1alpha1.InvoiceList invoice_list = 2;
    payment.v1alpha1.BilingList biling_list = 3;
        string status = 4;
    }

message DeleteCustomerRequest {
    uint32 organization_id = 1;
    string customer_id =2; 
}

message DeleteCustomerResponse {
    string status = 1;
}

message GetSuscriptionRequest {
    uint32 organization_id = 1;
    string suscription_id = 2;
}

message GetSuscriptionResponse {
    payment.v1alpha1.Suscription suscription = 1;
    string status = 2;
}
message GetOrganizationPaymentRequest {
    uint32 organization_id = 1;
}

message GetOrganizationPaymentResponse {
    payment.v1alpha1.Customer customer = 1;
    string status = 2;
}

message GetCustomerRequest {
    uint32 organization_id = 1;
    string customer_id =2;
}

message GetCustomerResponse {
    payment.v1alpha1.Customer customer = 1;
    string status = 2;
}

message GetBilingMonthRequest {
    uint32 organization_id = 1;
    string invoice_id = 2;
}

message GetBilingMonthResponse {
    payment.v1alpha1.Customer customer = 1;
    string status = 2;
}

message GetPaymentsRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
}

message GetPaymentsResponse {
    payment.v1alpha1.Payment payment = 1;
    string status = 2;
}
message UpdateSuscriptionRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    Suscription suscription = 3;
}

message UpdateSuscriptionResponse {
    payment.v1alpha1.Suscription suscription = 1;
    string status = 2;
}

message CreateSuscriptionRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    payment.v1alpha1.Suscription suscription = 3;
}

message CreateSuscriptionResponse {
    payment.v1alpha1.Customer customer = 1;
    string status = 2;
}

message CreateProjectRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    payment.v1alpha1.Project project = 3;
}

message CreateProjectResponse {
    string status = 1;
}

message CreateInvoiceRequest {
    string invoice_id = 1;
    string status = 2;

}

message CreateInvoiceResponse {
    payment.v1alpha1.Customer customer = 1;
    string status = 2;
}

message CreateCardRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    payment.v1alpha1.Card card = 3;

}

message CreateCardResponse {
    string token_id =1;
    string status = 2;
}

message CancelSuscriptionRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    string suscription_id =3;
    
}

message  CancelSuscriptionResponse {
    string status = 1;
}

message CreateCustomerRequest {
    payment.v1alpha1.Customer customer = 1;
}

message CreateCustomerResponse {
    string customer_id =1;
    string status = 2;
}

message CreatePaymentRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    payment.v1alpha1.Payment payment = 3;
}

message CreatePaymentResponse {
    string card_id =1;
    string status = 2;
}

message UpdatePaymentRequest {
    string customer_id = 1;
    payment.v1alpha1.Payment payment = 2;
}

message UpdatePaymentResponse {
    payment.v1alpha1.Payment payment = 1;
    string status = 2;
}

message DeletePaymentRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    string card_id = 3;
}

message DeletePaymentResponse {
    string status = 1;
}

message GetPaymentRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
    string card_id = 3;
}

message GetPaymentResponse {
    payment.v1alpha1.Payment payment = 1;
    string status = 2;
}

message ListPaymentRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
}

message ListPaymentResponse {
    payment.v1alpha1.PaymentList payment_list = 1;
    string status = 2;
}

message ListProjectsRequest {
    uint32 organization_id = 1;
    string customer_id = 2;
}

message ListProjectsResponse {
    payment.v1alpha1.ProjectList project_list = 1;
    string status = 2;
}

message GetProjectRequest {
    string organization_id = 1;
    string project_id = 2;
}

message GetProjectResponse {
    payment.v1alpha1.Customer customer = 1;
    string status = 2;
}